[package]
name = "keystory"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = "0.13"
redis = { version = "0.25", features = ["tokio-comp"] }
git2 = "0.18"
tokio = { version = "1.41", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
openssl = { version = "0.10", features = ["vendored"] }
